--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task5",
+  "name": "automation",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "cypress": "^13.4.0",
+    "mocha": "^10.2.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0"
+  },
   "dependencies": {
-    "cypress": "^13.6.0"
+    "cypress-cucumber-preprocessor": "^4.3.1",
+    "save-dev": "^0.0.1-security"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": false,
+    "step_definitions": "cypress/e2e/cucumber/Tests"
   }
 }
